@@ -1,3 +1,4 @@
 package agar is
   pragma pure (agar);
+  agar_error : exception;
 end agar;
